# pantrychef

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e3a808757a9d_create_initial_tables.py
app/: config.py  database.py  main.py
app/models/: models.py
app/routers/: pantry.py  users.py
app/schemas/: pantry.py  user.py
app/services/: auth.py  llm.py  pantry.py  shelf_life.py
docs/: pantryChef_SRD.md
tests/: conftest.py  test_auth.py  test_pantry.py  test_preferences.py  test_shelf_life.py
